[package]
name = "sodexo_webhook"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"]}
tokio = { version = "1.18.1", features = ["full"] }
chrono = "0.4.19"
dotenv = "0.15.0"
serde_json = "1.0"